# QnAAgentAPI

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  mypy.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 0ccfb5923a71_initial_migration.py
examples/: client_example.py
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  networkpolicy.yaml  pdb.yaml  pvc.yaml  secret.yaml.example  service.yaml
knowledge/: docker_basics.txt  fastapi_framework.txt  openai_models.txt  python_basics.txt
src/: config.py  main.py
src/api/: app.py  dependencies.py
src/api/routers/: __init__.py  chat.py  health.py  sessions.py  utils.py  verifications.py
src/domain/: entities.py  schemas.py
src/infrastructure/: database.py  models.py  openai_client.py
src/logic/: __init__.py
src/logic/chat/: __init__.py  service.py
src/logic/common/: __init__.py  knowledge_base.py
src/logic/sessions/: __init__.py  service.py
src/repositories/: message_repository.py  session_repository.py  summary_repository.py
tests/: README.md  __init__.py  conftest.py  test_chat.py  test_health.py  test_knowledge_base.py  test_sessions.py
