[tool.poetry]
name = "qna-agent-api"
version = "0.1.0"
description = "Production-ready QnA Agent API with OpenAI and knowledge base"
authors = ["Evrone <dev@evrone.com>"]
readme = "README.md"
packages = [{include = "*", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
openai = "^1.50.0"
pydantic = "^2.9.0"
pydantic-settings = "^2.5.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}
aiosqlite = "^0.20.0"
python-multipart = "^0.0.9"
sse-starlette = "^2.1.0"
alembic = "^1.13.0"
async-lru = "^2.0.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"
ruff = "^0.6.0"
black = "^25.11.0"
mypy = "^1.18.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["src"]
markers = [
    "integration: marks tests as integration tests (making real LLM calls)",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["api", "domain", "infrastructure", "repositories", "services", "config"]
